# 8INF916-Reseau-Moteur

./: CMakeLists.txt  LICENSE  README.md
GameApi/: GameApi.csproj  GameApi.http  JwtHelper.cs  MatchRequest.cs  Player.cs  Program.cs
GameApi/Models/: Achievement.cs  GameServer.cs  MatchCandidate.cs  MatchRequest.cs  Player.cs  PurchaseRequest.cs  Skin.cs  StatRule.cs  StatUpdateRequest.cs
src/: BulletApp.cpp  BulletApp.h  client_main.cpp  main.cpp  main2.cpp  server_main.cpp
src/Managers/: CameraManager.h  PhysicManager.h  Renderer.h  SceneObjectManager.h
src/Serializable/: ColoredDrawable.cpp  ColoredDrawable.h  InstanceData.cpp  InstanceData.h  InstancedData.cpp  InstancedData.h  Object3D.cpp  Object3D.h  ObjectData.cpp  ObjectData.h  RigidBody.cpp  RigidBody.h  Scene3D.cpp  Scene3D.h  Serializable.cpp  Serializable.h
src/client/: CMakeLists.txt  OnlineClient.cpp  OnlineClient.h  main.cpp
src/launcher/: CMakeLists.txt  LauncherApp.cpp  LauncherApp.h
src/server/: AchievementManager.cpp  AchievementManager.h  CMakeLists.txt  Player.cpp  Player.h  main.cpp
src/telemetry-client/: CMakeLists.txt  main.cpp  telemetry.html
